--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -6,32 +6,105 @@
     'stylesheet' > url();
 }
 
+/*
+  1. Use a more-intuitive box-sizing model.
+  2. Remove default margin
+*/
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+:root {
+  
+
+  
+  --black:#0D0D0D;
+  --lightturquoise: #A9D9D0;
+  --beige: #F2E7DC;
+  --turquoise: #038C7F;
+  --darkturquoise: #027373;
+ 
+}
+/*
+    3. Allow percentage-based heights in the application
+  */
+html,
 body {
-  background-color: #cdedff;
+  height: 100%;
+}
+/*
+    Typographic tweaks!
+    4. Add accessible line-height
+  */
+body {
+  line-height: 1.5;
+  font-family: "Poppins", sans-serif;
+}
+
+main {
+
+  margin-bottom: 10vh;
+}
+/*
+    6. Improve media defaults
+  */
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+/*
+    7. Remove built-in form typography styles
+  */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+/*
+    8. Avoid text overflows
+  */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+body {
+  background-color: var(--beige);
 }
 
 h1 {
-  color: #cdedff;
+  color: var(--beige);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .headerbar {
   padding: 2em 2em 2em 2em;
   border-style: solid;
-  border-color: black;
+  border-radius: 1em;
   display: flex;
   justify-content: center;
-  background-color: #28698f;
+  background-color: var(--darkturquoise);
 }
 
-.box-border {
+.cards
+ {
   border-style: solid;
-  border-color: #dba153;
-  border-width: 8px;
+  background-color:var(--lightturquoise) ;
+  border-width: 1px;
   border-radius: 10px;
-  margin-bottom: 5em;
-  margin-left: 3em;
-  margin-right: 3em;
+  margin: 3em 3em 3em 3em;
+
 }
 
 .button {
@@ -39,49 +112,43 @@ h1 {
   justify-content: center;
 }
 .buttonstyle {
-  background-color: #8f5d1a;
-  color: #cdedff;
+  background-color:var(--darkturquoise);
+  color: var(--beige);
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 10px;
+  
 }
 
-.boxes {
+.tags {
+  display: flex;
+  justify-content: center;
+  
+}
+.tagstyle {
+  border: solid;
+  height: 2em;
+  background: var(--darkturquoise);
+  border-radius: 1em;
+  display: flex;
+  justify-content: center;
+  padding: 1em 1em 2em 1em;
+
+}
+
+
+.cardheader {
   display: flex;
   justify-content: center;
 }
-.box1 {
-  border: solid;
-  width: 5em;
-  height: 1em;
-  border-color: black;
+
+.cardcontent {
   display: flex;
   justify-content: center;
-  margin: 1em 1em 1em 1em;
+  padding: 2em 1em 2em 1em;
 }
-.box2 {
-  border: solid;
-  width: 5em;
-  height: 1em;
-  border-color: black;
-  display: flex;
-  justify-content: center;
-  margin: 1em 1em 1em 1em;
-}
-.box3 {
-  border: solid;
-  width: 5em;
-  height: 1em;
-  border-color: black;
-  display: flex;
-  justify-content: center;
-  margin: 1em 1em 1em 1em;
-}
-.box4 {
-  border: solid;
-  width: 5em;
-  height: 1em;
-  border-color: black;
-  display: flex;
-  justify-content: center;
-  margin: 1em 1em 1em 1em;
+.bookmark{
+  position:absolute;
+left:26em;
+top:14em;
+color: var(--darkturquoise);
 }
