--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -103,7 +103,8 @@ h1 {
   background-color:var(--lightturquoise) ;
   border-width: 1px;
   border-radius: 10px;
-  margin: 3em 3em 3em 3em;
+  margin:1em 1em 1em 1em ;
+ 
 
 }
 
@@ -131,7 +132,8 @@ h1 {
   border-radius: 1em;
   display: flex;
   justify-content: center;
-  padding: 1em 1em 2em 1em;
+  padding-left: 1em;
+  padding-right: 1em;
 
 }
 
@@ -148,7 +150,7 @@ h1 {
 }
 .bookmark{
   position:absolute;
-left:26em;
-top:14em;
+left:23em;
+top:12em;
 color: var(--darkturquoise);
 }
