--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -96,7 +96,7 @@ h1 {
   justify-content: center;
   background-color: var(--darkturquoise);
 }
-
+/*--------------------------------------------------CardsStyle*/
 .cards
  {
   border-style: solid;
@@ -108,6 +108,17 @@ h1 {
 
 }
 
+.cardheader {
+  display: flex;
+  justify-content: center;
+}
+
+.cardcontent {
+  display: flex;
+  justify-content: center;
+  padding: 2em 1em 2em 1em;
+}
+/*--------------------------------------------------ButtonStyle*/
 .button {
   display: flex;
   justify-content: center;
@@ -119,7 +130,7 @@ h1 {
   border-radius: 10px;
   
 }
-
+/*-------------------------------------------------------TagsStyle*/
 .tags {
   display: flex;
   justify-content: center;
@@ -136,18 +147,8 @@ h1 {
   padding-right: 1em;
 
 }
+/*-------------------------------------------------------------IconsStyle*/
 
-
-.cardheader {
-  display: flex;
-  justify-content: center;
-}
-
-.cardcontent {
-  display: flex;
-  justify-content: center;
-  padding: 2em 1em 2em 1em;
-}
 .bookmark{
   position:absolute;
 left:23em;
