--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -82,7 +82,7 @@ h6 {
 body {
   background-color: var(--beige);
 }
-
+/*--------------------------------------------------------Headerbar*/
 h1 {
   color: var(--beige);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
@@ -160,10 +160,11 @@ color: var(--darkturquoise);
 
 .navbar {
   border:solid;
-  width: 26em;
-  height: 2em;
+  bottom:0;
+  width: 100%;
   background-color: var(--darkturquoise);
-  display:flex;
+  position:fixed;
+  display: flex;
   justify-content: center;
   justify-content: space-around;
 }
